// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@mosquito-ui/grid/Container renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
}

@media only screen and (min-width:576px) {
  .c0 {
    max-width: 540px;
  }
}

@media only screen and (min-width:778px) {
  .c0 {
    max-width: 720px;
  }
}

<div
  className="c0"
/>
`;

exports[`@mosquito-ui/grid/Container renders correctly width extendCss 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  font-size: 20px;
  background-color: black;
}

@media only screen and (min-width:576px) {
  .c0 {
    max-width: 540px;
  }
}

@media only screen and (min-width:778px) {
  .c0 {
    max-width: 720px;
  }
}

<div
  className="c0"
/>
`;
